--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.12.0",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@mui/material-nextjs": "^7.3.2",
     "@tailwindcss/vite": "^4.1.13",
     "aws-amplify": "^6.15.5",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router": "^7.8.2",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
